--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-[ ] get user location
+[x] get user location
 [ ] add a sidebar and show the closest restaurants
 [ ] database prolly sqlite to store the things
 [ ] rate restaurant codes, show comments, and show highest rated codes
