--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,5 @@
 [x] get user location
 [x] add a sidebar and show the closest restaurants
 [x] database prolly sqlite to store the things
-[ ] rate restaurant codes, show comments, and show highest rated codes
-[ ] signup with password salting hashing
+[x] rate restaurant codes, show comments, and show highest rated codes
+[x] signup with password salting hashing
